[package]
name = "snarfswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.28.0", features = ["rand"] }
anyhow = "1.0.78"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = [] }